# nano-common

./: CMakeLists.txt
cmake/: NanoColor.cmake  NanoModule.cmake
nano/: common.h
