cmake_minimum_required(VERSION 3.22.0)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

set(CMAKE_XCODE_GENERATE_SCHEME ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

include(NanoModule)

project(nano-common VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(NANO_COMMON_NAME common)
set(NANO_COMMON_MODULE_NAME nano-common)

set(NANO_COMMON_SRC_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/nano")
file(GLOB_RECURSE NANO_COMMON_SOURCE_FILES "${NANO_COMMON_SRC_DIRECTORY}/*.h" "${NANO_COMMON_SRC_DIRECTORY}/*.cpp")

add_library(${NANO_COMMON_MODULE_NAME} INTERFACE ${NANO_COMMON_SOURCE_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${NANO_COMMON_SOURCE_FILES})
target_include_directories(${NANO_COMMON_MODULE_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

add_library(nano::${NANO_COMMON_NAME} ALIAS ${NANO_COMMON_MODULE_NAME})

set_target_properties(${NANO_COMMON_MODULE_NAME} PROPERTIES XCODE_GENERATE_SCHEME OFF)
